# Codex-account-manager

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-release.ps1  build-win.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.css  App.tsx  api.ts  format.ts  index.css  types.ts
ui/src/components/: AccountsTab.tsx  OAuthModal.tsx  ProxyTab.tsx
