[package]
name = "codex-account-manager"
version = "0.2.0"
description = "Codex Account Manager"
authors = ["Asagiry"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codex_account_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "5"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }


